adding new section

--- a/index.html
+++ b/index.html
@@ -154,6 +154,25 @@
         </div>
     </div>
 
+    <div id="about">
+        <h3>About Our School.</h3>
+        <div class="ab-sec">
+            <div class="ab-tabs ab-ryt">
+                <img class="image" src="./img/edu2.jpg">
+            </div>   
+            <div class="ab-tabs ab-lft">
+                <h5>About</h5>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit odio eum ad non cum, fugiat quo odit maxime tenetur magnam veritatis quis suscipit quisquam!</p>
+                <h5>Details</h5>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis blanditiis animi veritatis quis suscipit quisquam veritatis quis suscipit quisquam?</p>
+                <h5>Programs</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum tenetur atque porro deleniti repudiandae commodi optio fuga obcaecati accusamus perferendis?</p>
+            </div>   
+        </div>
+    </div>
+
+<!-------------------------javascript--------------------->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./index.js"></script>
     
 
