--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Docy</title>
+    <title>Our school</title>
     <link rel="stylesheet" href="./Style.css">
    <link rel="stylesheet"  href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
@@ -18,7 +18,7 @@
                     
                     <li><a href="#">Courses</a></li>
                     <li><a href="#">Certificate</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Reviews</a></li>
                     <i class="fas fa-times" onclick="closemenu()"></i>
                 </ul>
                <i class="fas  fa-bars" onclick="openmenu()"></i>
@@ -153,6 +153,82 @@
                 </div>   
         </div>
     </div>
+    <div id="Certificate">
+        <h3>Free Courses with Certificates</h3>
+        <div class="crd">
+        <div class="Ce-cards">
+            <img src="./img/certificate png1.avif">
+            <div class="cntnt">
+                <h5> webdevelopment course</h5>
+                <p>18.5 hrs</p>
+                <button>Enroll now</button>
+            </div>
+        </div>
+        <div class="Ce-cards">
+            <img src="./img/certificate6.jpg">
+            <div class="cntnt">
+                <h5>Java full course</h5>
+                <p>25 hrs</p>
+                <button>Enroll now</button>
+            </div>
+        </div>
+        <div class="Ce-cards">
+            <img src="./img/certificate5.avif">
+            <div class="cntnt">
+                <h5>Complete Python course</h5>
+                <p>8 hrs</p>
+                <button>Enroll Now</button>
+            </div>
+        </div>
+        <div class="Ce-cards">
+            <img src="./img/certificate3.avif">
+            <div class="cntnt">
+                <h5>Java full course</h5>
+                <p>25 hrs</p>
+                <button>Enroll now</button>
+            </div>
+        </div>
+        <div class="Ce-cards">
+            <img src="./img/certificate4.avif">
+            <div class="cntnt">
+                <h5>Complete Javascript course</h5>
+                <p>8 hrs</p>
+                <button>Enroll Now</button>
+            </div>
+        </div>
+        <div class="Ce-cards">
+            <img src="./img/certificate2.jpg">
+            <div class="cntnt">
+                <h5>React course</h5>
+                <p>25 hrs</p>
+                <button>Enroll now</button>
+            </div>
+        </div>
+        <div class="Ce-cards">
+            <img src="./img/certificate5.avif">
+            <div class="cntnt">
+                <h5>Complete Sql course</h5>
+                <p>8 hrs</p>
+                <button>Enroll Now</button>
+            </div>
+        </div>
+        <div class="Ce-cards">
+            <img src="./img/certificate3.avif">
+            <div class="cntnt">
+                <h5>UI/UX design</h5>
+                <p>25 hrs</p>
+                <button>Enroll Now</button>
+            </div>
+        </div>
+        <div style="background-color: #cedbd9fd;" class="Ce-cards arrow">
+            <img src="./img/arrow.png">
+            <div class="cntnt">
+                <h5 style="color:green">For More</h5>
+                <button style="background-color:#6fb7c2fd;">View more</button>
+            </div>
+        </div>
+        </div>
+    </div>    
 
     <div id="about">
         <h3>About Our School.</h3>
@@ -170,7 +246,37 @@
             </div>   
         </div>
     </div>
-
+<!---============ Reivew =================-->
+       <div id="Reivew">
+            <h3>Success stories of OurSchool</h3>
+            <div class="R-sec">
+                <div class="a-tabs">
+                    <img class="image" src="./img/vedio.png">
+                    <h5>Live Master Class</h5>
+                    <p>500 Courses</p>
+                </div>  
+                
+                <div class="a-tabs">
+                    <img class="image" src="./img/vedio.png">
+                    <h5>Live Master Class</h5>
+                    <p>500 Courses</p>
+                </div>  
+                <div class="a-tabs">
+                    <img class="image" src="./img/vedio.png">
+                    <h5>Live Master Class</h5>
+                    <p>500 Courses</p>
+                </div>  
+                <div class="a-tabs">
+                    <img class="image" src="./img/vedio.png">
+                    <h5>Live Master Class</h5>
+                    <p>500 Courses</p>
+                </div>  <div class="a-tabs">
+                    <img class="image" src="./img/vedio.png">
+                    <h5>Live Master Class</h5>
+                    <p>500 Courses</p>
+                </div>  
+            </div>
+        </div>
 <!-------------------------javascript--------------------->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./index.js"></script>
